[gd_scene load_steps=3 format=3 uid="uid://ca4w3fwgrfghh"]

[ext_resource type="Script" path="res://globals/end_level.gd" id="1_ft524"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r7qbh"]

[node name="EndLevel" type="Node2D"]
script = ExtResource("1_ft524")

[node name="TransitionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="TransitionCollision" type="CollisionShape2D" parent="TransitionArea"]
position = Vector2(90.2781, 87.0599)
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_r7qbh")

[node name="EndLevelTimer" type="Timer" parent="."]

[connection signal="area_entered" from="TransitionArea" to="." method="_on_transition_area_area_entered"]
[connection signal="timeout" from="EndLevelTimer" to="." method="_on_end_level_timer_timeout"]
